# online-forum

./: .gitignore  .pre-commit-config.yaml  PRD.MD
backEnd/: .env.example  README.md  alembic.ini  pyproject.toml
backEnd/app/: main.py
backEnd/app/alembic/: env.py
backEnd/app/alembic/versions/: 2026_01_01_1741-9eaef26acfd9_init_tables.py  2026_01_01_1948-dac12a2f721e_init_tables.py
backEnd/app/api/: routes.py
backEnd/app/api/v1/: router.py
backEnd/app/api/v1/endpoints/: post.py  topic.py  user.py
backEnd/app/core/: config.py  constants.py  logger.py  seeders.py
backEnd/app/middleware/: logging.py
backEnd/app/models/: __init__.py  comment.py  post.py  report.py  topic.py  user.py
backEnd/app/models/junctions/: __init__.py  comment_vote.py  post_topic.py  post_vote.py
backEnd/app/repos/: __init__.py  base.py  comment.py  comment_vote.py  post.py  post_vote.py  report.py  topic.py
backEnd/app/schemas/: __init__.py  comment.py  comment_vote.py  post.py  post_vote.py  report.py  topic.py  user.py
backEnd/app/services/: __init__.py  base_service.py  post_service.py  report_service.py  topic_service.py  vote_service.py
backEnd/app/services/cache/: __init__.py  rate_limiter.py
docs/: PRD.MD
frontEnd/online-forum/: README.md  package-lock.json  package.json
frontEnd/online-forum/app/: page.jsx
frontEnd/online-forum/components/: mainSection.jsx  messages.jsx  navBar.jsx  postCard.jsx  threadsMenu.jsx  trendingTopics.jsx
