[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "httptools>=0.7.1 ; sys_platform == 'linux'",
    "loguru>=0.7.3",
    "psycopg>=3.3.2",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "tzdata>=2025.3",
    "uvicorn[standard]>=0.40.0",
    "uvloop>=0.22.1 ; sys_platform == 'linux'",
    "yarl>=1.22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
